# flutter-chat

./: Cargo.toml
src/: lib.rs  main.rs
ui/: pubspec.yaml
ui/.dart_tool/: package_config.json  package_config_subset
ui/.dart_tool/chrome-device/Default/: Favicons  History  History-journal  Network Action Predictor  Network Persistent State  Preferences  QuotaManager  Reporting and NEL  Safe Browsing Cookies  Top Sites  TransportSecurity  Visited Links  Web Data
ui/.dart_tool/chrome-device/Default/Extension Scripts/: LOG  LOG.old
ui/.dart_tool/chrome-device/Default/Extension State/: LOG  LOG.old
ui/.dart_tool/chrome-device/Default/Session Storage/: LOG  LOG.old
ui/.dart_tool/chrome-device/Default/Sessions/: Session_13309213522656006  Session_13309218168205619  Session_13309318813359933  Session_13309318982533378  Session_13309319581591716  Tabs_13309213533565587  Tabs_13309218168211649  Tabs_13309318813465032  Tabs_13309318982635934  (+1 more)
ui/.dart_tool/flutter_build/883e6870b8af41c1ebffbebd238b92bc/: .filecache  app.dill.deps  dart2js.d  dart2js.stamp  flutter_assets.d  main.dart  main.dart.js.deps  outputs.json  service_worker.d  web_entrypoint.stamp  web_release_bundle.stamp  web_resources.d  web_service_worker.stamp
ui/android/app/: build.gradle
ui/ios/Runner/: Info.plist
ui/ios/Runner.xcodeproj/: project.pbxproj
ui/lib/: chat.dart  main.dart
ui/lib/views/: chat_view.dart  login_page.dart
ui/macos/Runner.xcodeproj/: project.pbxproj
ui/macos/Runner/Configs/: AppInfo.xcconfig
ui/web/: index.html
ui/windows/runner/: Runner.rc  main.cpp
(+25 files in other folders)
