[package]
name = "chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
warp = "0.3.3"
pretty_env_logger = "0.4.0"
chashmap = "2.2.2"
futures-util = "0.3.24"
base64 = "0.13.0"
rand = "0.8.5"
serde_json = "1.0.85"
serde = {version="1.0.145", features=["derive"]}
log = "0.4.17"